<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MessageActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:id="@+id/welcome_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_txt" />

        <Button
                android:id="@+id/send_msg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_btn_txt" />

        <TextView
                android:id="@+id/send_msg_response_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendmsg_response" />

        <Button
                android:id="@+id/get_msg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getlatest_btn_txt" />

        <TextView
                android:id="@+id/get_msg_response_id_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getlatest_response_mid" />

        <TextView
                android:id="@+id/get_msg_response_data_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getlatest_response_mdata" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>